test github. first commit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="root"></div>
-
+	<div id="git-test"></div>
     <script src="js/react/react.js"></script>
     <script src="js/react/react-dom.js"></script>
     <script src="js/react/browser.min.js"></script>
